[package]
name = "deno-jieba"
version = "0.1.0"
edition = "2021"

[lib]
crate_type = ["cdylib"]

[dependencies]
jieba-rs = { version = "0.6.6", features = ["default-dict", "tfidf", "textrank"] }
serde = { version = "1.0.59", features = ["derive"] }
serde_json = "1.0.59"
lazy_static = "1.4.0"
wasm-bindgen = "0.2.81"
